--- a/issue_tracker/templates/layout.html
+++ b/issue_tracker/templates/layout.html
@@ -4,9 +4,10 @@
   <h1>Issue Tracker</h1>
   <div class=metanav>
     {% if not session.user_id %}
-    <a href="{{ url_for('login') }}">log in</a>
+    <a href="{{ url_for('login') }}">Log In</a>
+    <a href="{{ url_for('register') }}">Register</a>
     {% else %}
-    <a href="{{ url_for('logout') }}">log out</a>
+    <a href="{{ url_for('logout') }}">Log Out</a>
     {% endif %}
   </div>
   {% for message in get_flashed_messages() %}
