--- a/issue_tracker/templates/layout.html
+++ b/issue_tracker/templates/layout.html
@@ -7,6 +7,10 @@
     <a href="{{ url_for('login') }}">Log In</a>
     <a href="{{ url_for('register') }}">Register</a>
     {% else %}
+      {% if session.user_id == 1 %}
+        <a href="{{ url_for('dashboard') }}">All Issues</a>
+        <a href="{{ url_for('add_user') }}">Add User</a>
+      {% endif %}
     <a href="{{ url_for('logout') }}">Log Out</a>
     {% endif %}
   </div>
