--- a/issue_tracker/templates/layout.html
+++ b/issue_tracker/templates/layout.html
@@ -3,14 +3,13 @@
 <div class=page>
   <h1>Issue Tracker</h1>
   <div class=metanav>
-    {% if not session.user_id %}
+    {% if not session.user_level %}
     <a href="{{ url_for('login') }}">Log In</a>
     <a href="{{ url_for('register') }}">Register</a>
-    {% else %}
-      {% if session.user_id == 1 %}
+    {% elif session.user_level and session.user_level == 1 %}
         <a href="{{ url_for('dashboard') }}">All Issues</a>
+        <a href="{{ url_for('users') }}">All Users</a>
         <a href="{{ url_for('add_user') }}">Add User</a>
-      {% endif %}
     <a href="{{ url_for('logout') }}">Log Out</a>
     {% endif %}
   </div>
