--- a/issue_tracker/templates/layout.html
+++ b/issue_tracker/templates/layout.html
@@ -7,9 +7,15 @@
     <a href="{{ url_for('login') }}">Log In</a>
     <a href="{{ url_for('register') }}">Register</a>
     {% elif session.user_level and session.user_level == 1 %}
-        <a href="{{ url_for('dashboard') }}">All Issues</a>
-        <a href="{{ url_for('users') }}">All Users</a>
-        <a href="{{ url_for('add_user') }}">Add User</a>
+    <a href="{{ url_for('dashboard') }}">All Issues</a>
+    <a href="{{ url_for('users') }}">All Users</a>
+    <a href="{{ url_for('add_user') }}">Add User</a>
+    <a href="{{ url_for('logout') }}">Log Out</a>
+    {% elif session.user_level and session.user_level == 3 %}
+    <a href="{{ url_for('dashboard') }}">All Issues</a>
+    <a href="{{ url_for('raise_issue') }}">Raise Issue</a>
+    <a href="{{ url_for('users') }}">All Users</a>
+    <a href="{{ url_for('add_user') }}">Add User</a>
     <a href="{{ url_for('logout') }}">Log Out</a>
     {% endif %}
   </div>
