--- a/issue_tracker/templates/raise_issue.html
+++ b/issue_tracker/templates/raise_issue.html
@@ -2,29 +2,27 @@
 {% block body %}
 <h2>Raise Issue</h2>
 {% for error in errors %}<p class=error><strong>Error:</strong> {{ error }}{% endfor %}
-<form action="{{ url_for('add_user') }}" method=post>
+<form action="{{ url_for('raise_issue') }}" method=post>
     <div>
         <div>
-            <label>Forename:<input type="text" name="forename" value="{{ request.form['forename'] }}"></label>
+            <label>Issue Description:<textarea name="description" value="{{ request.form['description'] }}"></textarea></label>
         </div>
         <div>
-            <label>Surname:<input type="text" name="surname" value="{{ request.form['surname'] }}"></label>
-        </div>
-        <div>
-            <label>Email:<input type="text" name="email" value="{{ request.form['email'] }}"></label>
-        </div>
-        <div>
-            <label>Password:<input type="password" name="password" value="{{ request.form['password'] }}"></label>
-        </div>
-        <div>
-            <label>Confirm Password:<input type="password" name="confirm_password" value="{{ request.form['confirm_password'] }}"></label>
-        </div>
-        <div>
-            <label for="user_level">User Level</label>
-            <select name="user_level">
+            <label for="priority">Priority:</label>
+            <select name="priority">
                 <option value=""></option>
-                {% for user_level in user_levels %}
-                <option value="{{ user_level.user_level_id }}">{{ user_level.user_level_name }}</option>
+                {% for priority in priorities %}
+                <option value="{{ priority.priority_id }}">{{ priority.priority_name }}</option>
+                {% endfor %}
+            </select>
+
+        </div>
+        <div>
+            <label for="department">Department:</label>
+            <select name="department">
+                <option value=""></option>
+                {% for department in departments %}
+                <option value="{{ department.department_id }}">{{ department.department_name }}</option>
                 {% endfor %}
             </select>
 
