--- a/issue_tracker/templates/layout.html
+++ b/issue_tracker/templates/layout.html
@@ -1,5 +1,10 @@
 <!doctype html>
-<title>Issue Tracker</title>
+<head>
+  <meta charset="utf-8">
+  <title>Issue Tracker</title>
+  {{ moment.include_jquery() }}
+  {{ moment.include_moment() }}
+</head>
 <div class=page>
   <h1>Issue Tracker</h1>
   <div class=metanav>
