--- a/issue_tracker/templates/update_issue.html
+++ b/issue_tracker/templates/update_issue.html
@@ -1,15 +1,15 @@
 {% extends "layout.html" %}
 {% block body %}
-<h2>Assign Issue</h2>
+<h2>Update Issue</h2>
 {% for error in errors %}<p class=error><strong>Error:</strong> {{ error }}{% endfor %}
-<form action="{{ url_for('assign_issue', issue_id=issue['issue_id']) }}" method=post>
+<form action="{{ url_for('update_issue', issue_id=issue['issue_id']) }}" method=post>
     <div>
         <div>
-            <label>Issue Description:<textarea name="description" value="{{ issue.description }}" readonly></textarea></label>
+            <label>Issue Description:<p>{{ issue.description }}</p></label>
         </div>
         <div>
             <label for="priority">Priority:</label>
-            <select name="priority" readonly>
+            <select name="priority" disabled>
                 <option value=""></option>
                 {% for priority in priorities %}
                     {% if priority.priority_id == issue['priority'] %}
@@ -23,7 +23,7 @@
         </div>
         <div>
             <label for="department">Department:</label>
-            <select name="department" readonly>
+            <select name="department" disabled>
                 <option value=""></option>
                 {% for department in departments %}
                     {% if department.department_id == issue['department'] %}
@@ -36,17 +36,35 @@
 
         </div>
         <div>
-            <label for="assigned_to">Assign To:</label>
-            <select name="assigned_to">
+            <label for="status">Status:</label>
+            <select name="status" readonly>
                 <option value=""></option>
-                {% for rep in reps %}
-                <option value="{{ rep.user_id }}">{{ rep.forename +' '+ rep.surname }}</option>
+                {% for status in statuses %}
+                    {% if status.issue_status_id == issue['status'] %}
+                        <option value="{{ status.issue_status_id }}" selected>{{ status.status_name }}</option>
+                    {% else %}
+                        <option value="{{ status.issue_status_id }}">{{ status.status_name }}</option>
+                    {% endif %}
                 {% endfor %}
             </select>
 
         </div>
         <div>
-            <input type=submit value="Assign Issue">
+            <label for="assigned_to">Assigned To:</label>
+            <select name="assigned_to">
+                <option value=""></option>
+                {% for rep in reps %}
+                    {% if rep.user_id == issue['assigned_to'] %}
+                        <option value="{{ rep.user_id }}" selected>{{ rep.forename +' '+ rep.surname }}</option>
+                    {% else %}
+                        <option value="{{ rep.user_id }}">{{ rep.forename +' '+ rep.surname }}</option>
+                    {% endif %}
+                {% endfor %}
+            </select>
+
+        </div>
+        <div>
+            <input type=submit value="Update Issue">
         </div>
     </div>
 </form>
