Start working on UI
 * Added CSS files
 * Added avatar

--- a/issue_tracker/templates/dashboard.html
+++ b/issue_tracker/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% block body %}
 <h2>Dashboard</h2>
 {% if issues %}
-<table>
+<table class="table">
     <thead>
         <tr>
             <th>Description</th>
