--- a/issue_tracker/templates/users.html
+++ b/issue_tracker/templates/users.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 <h2>Users</h2>
-<table>
+<table class="table">
     <thead>
         <tr>
             <th>Name</th>
