--- a/issue_tracker/templates/layout.html
+++ b/issue_tracker/templates/layout.html
@@ -18,32 +18,32 @@
       {{ moment.include_moment() }} -->
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
-<div class="wrapper">
-    {% include 'header.html' %}
-    {% include 'main_sidebar.html' %}
-    <div class="content-wrapper">
-    <div class=metanav>
-        {% if not session.user_level %}
-        <a href="{{ url_for('login') }}">Log In</a>
-        <a href="{{ url_for('register') }}">Register</a>
-        {% elif session.user_level and session.user_level == 1 %}
-        <a href="{{ url_for('dashboard') }}">All Issues</a>
-        <a href="{{ url_for('users') }}">All Users</a>
-        <a href="{{ url_for('add_user') }}">Add User</a>
-        <a href="{{ url_for('logout') }}">Log Out</a>
-        {% elif session.user_level and session.user_level == 2 %}
-        <a href="{{ url_for('dashboard') }}">My Department Issues</a>
-        <a href="{{ url_for('logout') }}">Log Out</a>
-        {% elif session.user_level and session.user_level == 3 %}
-        <a href="{{ url_for('dashboard') }}">My Issues</a>
-        <a href="{{ url_for('raise_issue') }}">Raise Issue</a>
-        <a href="{{ url_for('logout') }}">Log Out</a>
-        {% endif %}
+    <div class="wrapper">
+        {% include 'header.html' %}
+        {% include 'main_sidebar.html' %}
+        <div class="content-wrapper">
+        <div class=metanav>
+            {% if not session.user_level %}
+            <a href="{{ url_for('login') }}">Log In</a>
+            <a href="{{ url_for('register') }}">Register</a>
+            {% elif session.user_level and session.user_level == 1 %}
+            <a href="{{ url_for('dashboard') }}">All Issues</a>
+            <a href="{{ url_for('users') }}">All Users</a>
+            <a href="{{ url_for('add_user') }}">Add User</a>
+            {% elif session.user_level and session.user_level == 2 %}
+            <a href="{{ url_for('dashboard') }}">My Department Issues</a>
+            {% elif session.user_level and session.user_level == 3 %}
+            <a href="{{ url_for('dashboard') }}">My Issues</a>
+            <a href="{{ url_for('raise_issue') }}">Raise Issue</a>
+            {% endif %}
+        </div>
+        {% for message in get_flashed_messages() %}
+        <div class=flash>{{ message }}</div>
+        {% endfor %}
+        {% block body %}{% endblock %}
+        </div>
     </div>
-    {% for message in get_flashed_messages() %}
-    <div class=flash>{{ message }}</div>
-    {% endfor %}
-    {% block body %}{% endblock %}
-    </div>
-</div>
+    <script src="{{ url_for('static', filename='js/jquery-2.2.3.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
