--- a/issue_tracker/templates/main_sidebar.html
+++ b/issue_tracker/templates/main_sidebar.html
@@ -7,7 +7,7 @@
             <div class="pull-left image">
                 <img src="{{ url_for('static', filename='img/avatar.png')}}" class="img-circle" alt="User Image"></div>
             <div class="pull-left info">
-                <p>Test User</p>
+                <p>{{ g.user['forename'] +' '+ g.user['surname'] }}</p>
                 <a href="#"> <i class="fa fa-circle text-success"></i>
                     Online
                 </a>
