Finish styling raise issue form

--- a/issue_tracker/templates/header.html
+++ b/issue_tracker/templates/header.html
@@ -1,7 +1,7 @@
 {% block header %}
 <header class="main-header">
     <!-- Logo -->
-    <a href="index2.html" class="logo">
+    <a href="{{ url_for('dashboard') }}" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
         <span class="logo-mini"> <b>t</b>
         </span>
