--- a/issue_tracker/templates/main_sidebar.html
+++ b/issue_tracker/templates/main_sidebar.html
@@ -13,66 +13,60 @@
                 </a>
             </div>
         </div>
-        <!-- search form -->
-        <form action="#" method="get" class="sidebar-form">
-            <div class="input-group">
-                <input type="text" name="q" class="form-control" placeholder="Search...">
-                <span class="input-group-btn">
-                    <button type="submit" name="search" id="search-btn" class="btn btn-flat"> <i class="fa fa-search"></i>
-                    </button>
-                </span>
-            </div>
-        </form>
-        <!-- /.search form -->
-        <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu">
             <li class="header">MAIN NAVIGATION</li>
-            <li class="active treeview">
-                <a href="#">
-                    <i class="fa fa-dashboard"></i>
-                    <span>Dashboard</span>
-                    <span class="pull-right-container">
-                        <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-                <ul class="treeview-menu">
-                    <li class="active">
-                        <a href="index.html">
-                            <i class="fa fa-circle-o"></i>
-                            Dashboard v1
-                        </a>
-                    </li>
-                    <li>
-                        <a href="index2.html">
-                            <i class="fa fa-circle-o"></i>
-                            Dashboard v2
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="pages/calendar.html">
-                    <i class="fa fa-calendar"></i>
-                    <span>Calendar</span>
-                    <span class="pull-right-container">
-                        <small class="label pull-right bg-red">3</small>
-                        <small class="label pull-right bg-blue">17</small>
-                    </span>
-                </a>
-            </li>
-            <li>
-                <a href="pages/mailbox/mailbox.html">
-                    <i class="fa fa-envelope"></i>
-                    <span>Mailbox</span>
-                    <span class="pull-right-container">
-                        <small class="label pull-right bg-yellow">12</small>
-                        <small class="label pull-right bg-green">16</small>
-                        <small class="label pull-right bg-red">5</small>
-                    </span>
-                </a>
-            </li>
+            {% if session.user_level and session.user_level == 1 %}
+                <li data-url="dashboard">
+                    <a href="{{ url_for('dashboard') }}">
+                        <i class="fa fa-dashboard"></i>
+                        <span>All Issues</span>
+                    </a>
+                </li>
+                <li class="treeview" data-url="users">
+                    <a href="#">
+                        <i class="fa fa-dashboard"></i>
+                        <span>Users</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li>
+                            <a href="{{ url_for('users') }}">
+                                <i class="fa fa-circle-o"></i>
+                                All Users
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ url_for('add_user') }}">
+                                <i class="fa fa-circle-o"></i>
+                                Add User
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            {% elif session.user_level and session.user_level == 2 %}
+                <li>
+                    <a href="{{ url_for('dashboard') }}">
+                        <i class="fa fa-dashboard"></i>
+                        <span>Department Issues</span>
+                    </a>
+                </li>
+            {% elif session.user_level and session.user_level == 3 %}
+                <li>
+                    <a href="{{ url_for('dashboard') }}">
+                        <i class="fa fa-dashboard"></i>
+                        <span>My Issues</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{{ url_for('raise_issue') }}">
+                        <i class="fa fa-plus"></i>
+                        <span>Raise Issue</span>
+                    </a>
+                </li>
+            {% endif %}
         </ul>
     </section>
-    <!-- /.sidebar -->
 </aside>
 {% endblock %}
