--- a/issue_tracker/templates/raise_issue.html
+++ b/issue_tracker/templates/raise_issue.html
@@ -1,35 +1,53 @@
 {% extends "layout.html" %}
 {% block body %}
-<h2>Raise Issue</h2>
-{% for error in errors %}<p class=error><strong>Error:</strong> {{ error }}{% endfor %}
-<form action="{{ url_for('raise_issue') }}" method=post>
-    <div>
-        <div>
-            <label>Issue Description:<textarea name="description" value="{{ issue['description'] or request.form['description'] }}"></textarea></label>
-        </div>
-        <div>
-            <label for="priority">Priority:</label>
-            <select name="priority">
-                <option value=""></option>
-                {% for priority in priorities %}
-                <option value="{{ priority.priority_id }}">{{ priority.priority_name }}</option>
-                {% endfor %}
-            </select>
+<section class="content-header">
+    <h1>
+        Raise Issue
+    </h1>
+</section>
+<section class="content">
+    <div class="row">
+        <div class="col-md-6">
+            {% if errors %}
+            <div class="alert alert-danger alert-dismissible">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                <h4><i class="icon fa fa-ban"></i> Error!</h4>
+                {% for error in errors %}{{ error }}<br/>{% endfor %}
+            </div>
+            {% endif %}
+            <div class="box box-info">
+                <form action="{{ url_for('raise_issue') }}" method=post>
+                    <div class="box-body">
+                        <div class="form-group">
+                            <label>Issue Description</label>
+                            <textarea name="description" value="{{ request.form['description'] }}" class="form-control"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="priority">Priority:</label>
+                            <select name="priority" class="form-control">
+                                <option value=""></option>
+                                {% for priority in priorities %}
+                                <option value="{{ priority.priority_id }}">{{ priority.priority_name }}</option>
+                                {% endfor %}
+                            </select>
 
-        </div>
-        <div>
-            <label for="department">Department:</label>
-            <select name="department">
-                <option value=""></option>
-                {% for department in departments %}
-                <option value="{{ department.department_id }}">{{ department.department_name }}</option>
-                {% endfor %}
-            </select>
-
-        </div>
-        <div>
-            <input type=submit value="Raise Issue">
+                        </div>
+                        <div class="form-group">
+                            <label for="department">Department:</label>
+                            <select name="department" class="form-control">
+                                <option value=""></option>
+                                {% for department in departments %}
+                                <option value="{{ department.department_id }}">{{ department.department_name }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <div class="box-footer">
+                            <button type="submit" class="btn btn-info btn-md pull-right">Raise Issue</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</form>
+</section>
 {% endblock %}
