--- a/issue_tracker/templates/update_issue.html
+++ b/issue_tracker/templates/update_issue.html
@@ -7,13 +7,14 @@
 </section>
 <section class="content">
     <div class="row">
-        <!-- right column -->
         <div class="col-md-6">
+            {% if errors %}
             <div class="alert alert-danger alert-dismissible">
                 <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
                 <h4><i class="icon fa fa-ban"></i> Error!</h4>
                 {% for error in errors %}{{ error }}{% endfor %}
             </div>
+            {% endif %}
             <div class="box box-info">
                 <form action="{{ url_for('update_issue', issue_id=issue['issue_id']) }}" method=post>
                     <div class="box-body">
