--- a/issue_tracker/templates/layout.html
+++ b/issue_tracker/templates/layout.html
@@ -12,12 +12,12 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 <!-- Theme style -->
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/AdminLTE.css') }}">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/skin-blue.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/skin-purple.css') }}">
 
 <!-- {{ moment.include_jquery() }}
       {{ moment.include_moment() }} -->
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-purple sidebar-mini">
     <div class="wrapper">
         {% include 'header.html' %}
         {% include 'main_sidebar.html' %}
