Fix validation errors not showing

--- a/issue_tracker/templates/logged_out_layout.html
+++ b/issue_tracker/templates/logged_out_layout.html
@@ -8,11 +8,11 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/AdminLTE.css') }}">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/skin-blue.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/skin-purple.css') }}">
 
 <!-- {{ moment.include_moment() }} -->
 </head>
-<body class="hold-transition skin-blue" style="background: #d2d6de;">
+<body class="hold-transition skin-purple" style="background: #d2d6de;">
     <!-- <div class=metanav>
         {% if not session.user_level %}
         <a href="{{ url_for('login') }}">Log In</a>
