--- a/issue_tracker/templates/login.html
+++ b/issue_tracker/templates/login.html
@@ -2,8 +2,7 @@
 {% block body %}
 <div class="login-box">
     <div class="login-logo">
-        <a href="#"> <b>t</b>
-            rckr
+        <a href="#"> <b>t</b>rckr
         </a>
     </div>
     <div class="login-box-body">
