--- a/issue_tracker/templates/layout.html
+++ b/issue_tracker/templates/layout.html
@@ -16,6 +16,16 @@
 
 <!-- {{ moment.include_jquery() }}
       {{ moment.include_moment() }} -->
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script type="text/javascript" charset="utf-8">
+    var socket = io.connect('http://' + document.domain + ':' + location.port);
+    socket.on('connect', function() {
+        socket.emit('my event', {data: 'I\'m connected!'});
+    });
+    // socket.on('my response', function(data) {
+    //     alert(data.data)
+    // });
+</script>
 </head>
 <body class="hold-transition skin-purple sidebar-mini">
     <div class="wrapper">
