--- a/issue_tracker/templates/main_sidebar.html
+++ b/issue_tracker/templates/main_sidebar.html
@@ -24,7 +24,7 @@
                 </li>
                 <li class="treeview" data-url="users">
                     <a href="#">
-                        <i class="fa fa-dashboard"></i>
+                        <i class="fa fa-users"></i>
                         <span>Users</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
