--- a/issue_tracker/templates/login.html
+++ b/issue_tracker/templates/login.html
@@ -6,6 +6,7 @@
         </a>
     </div>
     <div class="login-box-body">
+        <p class="login-box-msg">Sign in here</p>
         {% if errors %}
         <div class="alert alert-danger alert-dismissible">
             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
