Start project clean up
 * Updated README
 * Removed dependency on ionicons
 * Corrected font logo formatting

--- a/issue_tracker/templates/header.html
+++ b/issue_tracker/templates/header.html
@@ -6,8 +6,7 @@
         <span class="logo-mini"> <b>t</b>
         </span>
         <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg"> <b>t</b>
-            rckr
+        <span class="logo-lg"> <b>t</b>rckr
         </span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
