--- a/issue_tracker/templates/login.html
+++ b/issue_tracker/templates/login.html
@@ -16,11 +16,11 @@
         {% endif %}
         <form action="{{ url_for('login') }}" method=post>
             <div class="form-group has-feedback">
-                <input type="email" name="email" class="form-control" placeholder="Email" value="{{ request.form['email'] }}"/>
+                <input type="email" name="email" class="form-control" placeholder="Email" value="{{ request.form['email'] }}" required />
                 <span class="fa fa-envelope form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
-                <input type="password" name="password" class="form-control" placeholder="Password" value="{{ request.form['password'] }}"/>
+                <input type="password" name="password" class="form-control" placeholder="Password" value="{{ request.form['password'] }}" required />
                 <span class="fa fa-lock form-control-feedback"></span>
             </div>
             <div class="row">
