--- a/issue_tracker/templates/register.html
+++ b/issue_tracker/templates/register.html
@@ -16,23 +16,23 @@
         {% endif %}
         <form action="{{ url_for('register') }}" method=post>
             <div class="form-group has-feedback">
-                <input type="text" name="forename" class="form-control" placeholder="Forename" value="{{ request.form['forename'] }}"/>
+                <input type="text" name="forename" class="form-control" placeholder="Forename" value="{{ request.form['forename'] }}" required/>
                 <span class="fa fa-user form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
-                <input type="text" name="surname" class="form-control" placeholder="Surname" value="{{ request.form['surname'] }}"/>
+                <input type="text" name="surname" class="form-control" placeholder="Surname" value="{{ request.form['surname'] }}" required/>
                 <span class="fa fa-user form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
-                <input type="email" name="email" class="form-control" placeholder="Email Address" value="{{ request.form['email'] }}"/>
+                <input type="email" name="email" class="form-control" placeholder="Email Address" value="{{ request.form['email'] }}" required/>
                 <span class="fa fa-envelope form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
-                <input type="password" name="password" class="form-control" placeholder="Password" value="{{ request.form['password'] }}"/>
+                <input type="password" name="password" class="form-control" placeholder="Password" value="{{ request.form['password'] }}" required/>
                 <span class="fa fa-lock form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
-                <input type="password" name="confirm_password" class="form-control" placeholder="Confirm Password" value="{{ request.form['confirm_password'] }}"/>
+                <input type="password" name="confirm_password" class="form-control" placeholder="Confirm Password" value="{{ request.form['confirm_password'] }}" required/>
                 <span class="fa fa-lock form-control-feedback"></span>
             </div>
             <div class="row">
