--- a/issue_tracker/templates/layout.html
+++ b/issue_tracker/templates/layout.html
@@ -14,12 +14,13 @@
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 <script type="text/javascript" charset="utf-8">
     var socket = io.connect('http://' + document.domain + ':' + location.port);
+    var userID = {{ g.user['user_id'] }}
     socket.on('connect', function() {
-        socket.emit('my event', {data: 'I\'m connected!'});
+        socket.emit('join', {data: userID});
     });
-    // socket.on('my response', function(data) {
-    //     alert(data.data)
-    // });
+    socket.on('message', function(data) {
+        console.log(data)
+    });
 </script>
 </head>
 <body class="hold-transition skin-purple sidebar-mini">
