Change all action links to Fontawesome

--- a/issue_tracker/templates/dashboard.html
+++ b/issue_tracker/templates/dashboard.html
@@ -32,7 +32,7 @@
                                     <td>{{  issue.created }}</td>
                                     <td>{{ issue.status_name }}</td>
                                     <td>
-                                        <a href="/issues/update/{{ issue.issue_id }}">Update</a>
+                                        <a href="/issues/update/{{ issue.issue_id }}" title="Update Issue"><i class="fa fa-pencil"></i></a>
                                     </td>
                                 </tr>
                                 {% endfor %}
