--- a/issue_tracker/templates/layout.html
+++ b/issue_tracker/templates/layout.html
@@ -11,30 +11,36 @@
 
 <!-- {{ moment.include_jquery() }}
       {{ moment.include_moment() }} -->
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-<script type="text/javascript" charset="utf-8">
-    var socket = io.connect('http://' + document.domain + ':' + location.port);
-    var userID = {{ g.user['user_id'] }}
-    socket.on('connect', function() {
-        socket.emit('join', {data: userID});
-    });
-    socket.on('message', function(data) {
-        console.log(data)
-    });
-</script>
 </head>
 <body class="hold-transition skin-purple sidebar-mini">
     <div class="wrapper">
         {% include 'header.html' %}
         {% include 'main_sidebar.html' %}
         <div class="content-wrapper">
-        <!-- {% for message in get_flashed_messages() %}
-        <div class=flash>{{ message }}</div>
-        {% endfor %} -->
-        {% block body %}{% endblock %}
+            <div class="alert alert-success alert-dismissible socket-message">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                <h4><i class="icon fa fa-check"></i> Alert!</h4>
+                <p class="text"></p>
+            </div>
+            {% block body %}{% endblock %}
         </div>
     </div>
     <script src="{{ url_for('static', filename='js/jquery-2.2.3.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+    <script type="text/javascript" charset="utf-8">
+        var socket = io.connect('http://' + document.domain + ':' + location.port);
+        var userID = {{ g.user['user_id'] }}
+        socket.on('connect', function() {
+            socket.emit('join', {data: userID});
+        });
+        socket.on('message', function(data) {
+            $('.socket-message').children('.text').html(data);
+            $('.socket-message').slideDown();
+        });
+        $(document).ready(function(){
+            $('.socket-message').hide();
+        });
+    </script>
 </body>
