--- a/issue_tracker/templates/header.html
+++ b/issue_tracker/templates/header.html
@@ -16,7 +16,7 @@
                 <li class="dropdown notifications-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-bell-o"></i>
-                        <span class="label label-warning">10</span>
+                        <!-- <span class="label label-warning">10</span> -->
                     </a>
                     <ul class="dropdown-menu">
                         <li class="header">You have 10 notifications</li>
